fixed spacing, figcaptions

--- a/css/main.scss
+++ b/css/main.scss
@@ -416,7 +416,7 @@ textarea {
     background-color: $color;
   }
 
-  figure {
+  .chapter figure {
     margin-bottom: $gutter-h * 2;
   }
 
